--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/news">NEWS</a>
+              <a class="nav-link active" href="/news.html">NEWS</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="/member.html">MEMBERS</a>
