--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WELFARECODE</title>
+  <title>GALMAE MAKER SPACE</title>
 
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -89,7 +89,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
       <div class="container-fluid">
         <div class="thumbnail"><a class="navbar-brand" href="/">
-            <img src="img/logo.png" width="100" height="100" alt="LOGO">
+            <img src="img/logo.png" width="100" height="100" alt="LOGO" style="margin: 10px;">
           </a>
         </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -136,15 +136,15 @@
   <!--맨처음 로고 띄우기-->
   <div class="wrapper">
     <a class="logo" href="/">
-      <img src="img/logo.png" width="500" height="500" alt="LOGO">
+      <img src="img/logo.png" width="400" height="400" alt="LOGO">
     </a>
   </div>
   <div id="main_img">
     <img src="img/main_img.jpg" alt="MAIN_IMG" width="100%">
   </div>
   <div class="slogan">
-    <h1>CODE FOR MINORITY GROUP</h1>
-    <h3>사회적 약자들을 위한 코딩,<br>그 길을 개척합니다.</h3>
+    <h1>MAKE FOR EVERYONE</h1>
+    <h3>학생들의 꿈이 펼쳐지는 곳</h3>
   </div>
 
   <!-- FOOTER 달기 -->
