--- a/index.html
+++ b/index.html
@@ -98,33 +98,17 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="/club/introduction" id="navbarDropdown" role="button"
-                data-bs-toggle="dropdown" aria-expanded="false">
-                WELFARE-CODE
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="/club/introduction">CLUB INTRODUCTION</a></li>
-                <li><a class="dropdown-item" href="/club/values">CLUB VALUES</a></li>
-                <li><a class="dropdown-item" href="/club/milestone">CLUB MILESTONE</a></li>
-              </ul>
+            <li class="nav-item">
+              <a class="nav-link active">MAKERSPACE</a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="/services/credit_bot" id="navbarDropdown" role="button"
-                data-bs-toggle="dropdown" aria-expanded="false">
-                SERVICES
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="/services/credit_bot">고교학점제 봇</a></li>
-                <li><a class="dropdown-item" href="/services/lunchon">LUNCH-ON</a></li>
-                <li><a class="dropdown-item" href="/services/etc">AND SO ON</a></li>
-              </ul>
+            <li class="nav-item">
+              <a class="nav-link active" href="club/introduction.html">INTORDUCTION</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="club/milestone.html">MILESTONE</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="/news.html">NEWS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="/member.html">MEMBERS</a>
             </li>
           </ul>
         </div>
@@ -140,7 +124,7 @@
     </a>
   </div>
   <div id="main_img">
-    <img src="img/main_img.jpg" alt="MAIN_IMG" width="100%">
+    <img src="img/makerspace_main1.png" alt="MAIN_IMG" height=700 width="100%">
   </div>
   <div class="slogan">
     <h1>MAKE FOR EVERYONE</h1>
