--- a/club/milestone.html
+++ b/club/milestone.html
@@ -1,6 +1,24 @@
 <!DOCTYPE html>
 <html lang="ko">
 
+<style>
+    #content{
+        font-size: 20px;
+        font-weight: 400;
+        width: 35%;
+        margin: auto;
+    }
+
+    .year{
+        font-size: 40px;
+    }
+
+    * {
+      font-family: 'Nanum Gothic Coding', monospace;
+    }
+
+</style>
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,8 +44,13 @@
 
 <body>
     <div id="header"></div>
-    <h1>동아리 연혁</h1>
-    <!-- FOOTER 달기 -->
+    <img src="/img/makerspace_out5.png" alt="..." width="100%" height="600px" style="margin-bottom: 20px;">
+    <div id="content">
+            <hr size="4">
+            <div class="year">2020년</div>- 메이커 스페이스 구상 및 설계(레인보우 메이커)<br>- 메이커 스페이스 착공<br><hr size="4">
+            <div class="year">2021년</div>- 메이커 스페이스 완공<br>- 레이저 커팅기, 3D프린터, 납땜기<hr size="4">
+            <div class="year">2022년</div>- <br><hr size="4">
+    </div>
     <div id="footer"></div>
 </body>
 
