--- a/news.html
+++ b/news.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="ko">
 
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TRENDING NEWS</title>
+    <title>NEWS</title>
 
 
     <link rel="stylesheet" href="/css/bootstrap.css">
@@ -28,13 +29,23 @@
             max-width: 100%;
             height: auto;
           }
+
+          * {
+      font-family: 'Nanum Gothic Coding', monospace;
+    }
+
+    @media (max-width: 600px) {
+      body {
+        overflow: hidden;
+      }
+    }
     </style>
 </head>
 
 <body>
     <div id="header"></div>
-    <div class="news_img">
-        <img src="/img/news_img.jpg" alt="MAIN_IMG" width="100%" height="auto">
+    <div style="text-align: center; font-size: 30px; font-weight: 600;">
+        전해줄 소식이 없네요ㅠㅠ<br>뉴스를 추가해주세요.
     </div>
     <div id="footer"></div>
 </body>
